src/objects/ERPIntegration_SH_Owner__mdt.object
<CustomObject>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <inlineHelpText>The owner value is only applied to sales lines that have this company code.</inlineHelpText>
        <label>Company Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <inlineHelpText>The owner value is only applied to sales lines from this country.</inlineHelpText>
        <label>Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultOwnerID__c</fullName>
        <inlineHelpText>The Salesforce ID of the default owner for the sales line. Only used if the integration cannot map the owner from the ERP system.</inlineHelpText>
        <label>Default Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapToERPOwnership__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>The integration will attempt to map the owner of the sales line based on the owner of the sales line in the ERP system. For this to work, the Movex User ID field must be populated in the Salesforce user&apos;s profile.

If the owner cannot be mapped, then the Default Owner ID will be used.</inlineHelpText>
        <label>Assign Ownership Based On ERP Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductArea__c</fullName>
        <inlineHelpText>A single letter indicating the product area for the sales line. The owner value is only applied to sales lines that have this company code.</inlineHelpText>
        <label>Product Area</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceErpId__c</fullName>
        <label>Source ERP</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                    <label>AX</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Movex</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ERP Integration Sales History Owner</label>
    <pluralLabel>ERP Integration Sales History Owners</pluralLabel>
</CustomObject>